--- a/_static/custom.css
+++ b/_static/custom.css
@@ -28,9 +28,15 @@ div.navbar-brand-box a.navbar-brand img.logo {
     border-radius: 0%;
 }
 
+.admonition {
+    border-radius: 0% !important;
+    box-shadow: 0 0.2rem 0.5rem rgba(0,0,0,0.05),0 0 0.0625rem rgba(0,0,0,0.1);
+}
+
 tt, code, kbd, samp, pre {
     font-family: 'Cascadia Code', var(--pst-font-family-monospace) !important;
     font-size: 95% !important;
+    border-radius: 0;    
 }
 
 code {
